fix transitions on mobile safari

--- a/app/styles/_items.scss
+++ b/app/styles/_items.scss
@@ -7,12 +7,11 @@
   top: 0;
   background: rgba(255,255,255,0.9);
   box-shadow: 0 0 5px rgba(0,0,0,0.3);
-  @include transition( height 0.5s ease,
-                       top 0.5s ease,
+  @include transition( top 0.5s ease,
                        background 0.5s ease);
 
   &.hidden {
-    top: 100%;
+    top: 110%;
   }
 
   header {
