--- a/app/styles/_results.scss
+++ b/app/styles/_results.scss
@@ -20,7 +20,6 @@
 
   overflow: auto;
   -webkit-overflow-scrolling: touch;
-
 }
 
 .results-container {
@@ -33,6 +32,10 @@
   .item {
     display: block;
     border-bottom: 1px solid #D7D7D7;
+
+    &:last-child {
+      border-bottom: none;
+    }
 
     header {
       box-shadow: none;
